<resources>
    <string name="app_name">The Easter Egg Guide</string>
    <string name="profile_name_hint">Name</string>
    <string name="profile_birthday_header">Birthday</string>
    <string name="profile_select_birthday">Select Birthday</string>
    <string name="profile_gender_header">Gender</string>
    <string name="profile_about_me_hint">About Me</string>
    <string name="profile_save_button">Save</string>
    <string name="favorites_title">Favorites</string>
    <string name="no_favorites_message">No favorites saved yet!</string>
    <string name="wifi_connected">You are connected to the internet.</string>
    <string name="wifi_disconnected">You are not connected to the internet.</string>
    <string name="random_map_button_text">Tap To Pick Random Map \n[Cost: 950pts]</string>
</resources>