<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CUSTOM_ITEM_background_dark"
    tools:context=".PROFILE_PAGE">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/CUSTOM_ITEM_text_primary_light"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/profile_name_hint"
                android:textColor="@color/CUSTOM_ITEM_text_primary_light"
                android:textColorHint="@color/CUSTOM_ITEM_text_secondary_light"
                android:autofillHints="name"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/birthday_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile_birthday_header"
                android:textColor="@color/CUSTOM_ITEM_text_secondary_light"
                app:layout_constraintTop_toBottomOf="@+id/name_edittext"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/birthday_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_select_birthday"
                android:textSize="18sp"
                android:padding="8dp"
                android:textColor="@color/CUSTOM_ITEM_text_primary_light"
                app:layout_constraintTop_toBottomOf="@+id/birthday_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/gender_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile_gender_header"
                android:textColor="@color/CUSTOM_ITEM_text_secondary_light"
                app:layout_constraintTop_toBottomOf="@+id/birthday_text"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/gender_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/favorite_map_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile_favorite_map_header"
                android:textColor="@color/CUSTOM_ITEM_text_secondary_light"
                app:layout_constraintTop_toBottomOf="@+id/gender_spinner"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/favorite_map_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/favorite_map_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/about_me_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/profile_about_me_hint"
                android:minLines="3"
                android:gravity="top"
                android:textColor="@color/CUSTOM_ITEM_text_primary_light"
                android:textColorHint="@color/CUSTOM_ITEM_text_secondary_light"
                android:autofillHints="biography"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/favorite_map_spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/profile_save_button"
                app:layout_constraintTop_toBottomOf="@+id/about_me_edittext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_nav_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/CUSTOM_ITEM_background_light"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:itemIconSize="36dp"
            app:itemIconTint="@null"
            app:itemTextColor="@color/bottom_nav_text_color"
            app:menu="@menu/bottom_nav_menu" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>